--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rimraf": "~2.5.2"
   },
   "dependencies": {
+    "fs-extra": "^4.0.1",
     "gulp-sass": "^3.1.0",
     "nan": "^2.6.2"
   }
